GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program; if not, write to the Free Software
Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.

============================================================

PyKota NEWS :
       
    - 1.24alpha11 :
    
        - Huge speed improvements when modifying billing codes.
        
        - Both pkbcodes and pkprinters now display the percent done
          for all actions.
          
        - The pkinvoice invoice generator command line utility is now
          included.
          
    - 1.24alpha10 :   
    
        - Huge speed improvements when deleting users, printers, and
          billing codes.
          
    - 1.24alpha9 :
    
        - Preliminary support for MySQL, thanks to Matt Hyclak.
        
    - 1.24alpha8 :
    
        - The 'preaccounter' configuration directive was introduced to control
          which parser to use for precomputation of the job's size. When unset,
          the internal parser is used just like it was previously. See
          conf/pykota.conf.sample for more details.
          
        - Now subprocesses launched through the overwrite_jobticket directive
          can also output 'CANCEL', to represent the user's own choice to
          cancel the print job.
          
    - 1.24alpha7 :
     
        - pkbanner now handles new print limiting modes correctly.
        
        - The cupspykota backend wrapper now accepts to be interrupted
          with a kill -INT. This causes an immediate and clean abort
          of the current print job.
          
        - Matt Hyclak contributed the possibility to store the printing
          history in a MySQL database. See the contributed/ directory
          for details.
          
        - Added 2006 to the copyright's years.
        
    - 1.24alpha6 :
    
        - Fixed internal SNMP and PJL handling code for very fast